# car_price_predictor

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.dvc/: config
.github/variables/: variables.json
.github/workflows/: CD.yml  CI.yml
inference/: __init__.py  client.py
model_registry/: publish.py
model_training/: __init__.py  champion.yaml  config.py  sweep.py  train.py
model_training/data/: .gitignore  autoscout24_dataset_20251108.csv.dvc
serving/: README.md  __init__.py  app.py  predictor.py  pyproject.toml  requirements.txt
tests/: conftest.py  smoke_test.py  test_config.py  test_model_selection.py  test_serving.py  test_smoke.py  test_train.py
