[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "car-price-predictor"
version = "0.1.0"
description = "A machine learning model to predict used car prices from listing data."
readme = "README.md"
requires-python = ">=3.12,<3.14"
authors = [
    { name = "Bryan Lusse", email = "bryanlusse@outlook.com" },
]
keywords = ["machine-learning", "regression", "car-price", "scikit-learn"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3,<1.8",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "joblib>=1.3",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
pipeline = [
    "dvc[s3]>=3.0",
    "mlflow>=2.14",
    "boto3>=1.34",
    "huggingface-hub>=1.24.0",
]
# Client-side deps for talking to the deployed Space (the `inference` smoke test).
# The Space's own runtime deps live in serving/pyproject.toml, not here.
serving = [
    "gradio-client>=1.3",
    "huggingface-hub>=1.24.0",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "jupyter>=1.0",
    "pre-commit>=4.6.0",
    "dvc[s3]>=3.0",
    "mlflow>=2.14",
    "boto3>=1.34",
    "gradio-client>=1.3",
]

[project.scripts]
train-model = "model_training.train:main"
sweep-models = "model_training.sweep:main"

[project.urls]
Homepage = "https://github.com/bryanlusse/car_price_predictor"
Repository = "https://github.com/bryanlusse/car_price_predictor"

[tool.hatch.build.targets.wheel]
packages = ["model_training", "model_registry", "serving", "inference"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
